Added Toronto Word Pool

--- a/main.tex
+++ b/main.tex
@@ -70,6 +70,11 @@ study.   Thus far, dramatic effects on the contiguity effect in free recall
 have primarily been observed comparing patient populations; older adults and
 memory disordered individuals show impaired contiguity effects
 \cite{KahaEtal02,PaloEtal19}.
+% The Palombo citation is:
+%Medial temporal lobe amnesia is associated with a deficit in recovering
+%temporal context 
+%DJ Palombo, JM Di Lascio, MW Howard, M Verfaellie
+%Journal of cognitive neuroscience 31 (2), 236-248
 
 
 Beyond the contiguity effect, free recall contains many other well-explored
@@ -136,18 +141,14 @@ encoding interference from previous items \cite{WyblEtal09}.
 
 Three hundred thirty undergraduates from Syracuse University participated in
 this study.  
-%Need more Demographic Information (Claudio: where would we get that from?)
-%Hopefully Marc has it?
 Participants were excluded if they failed to recall a correct word in at least
 one trial ($n = 15$), and if they did not perform all three conditions ($n =
 7$). Data from 308 participants was used in subsequent analyses.  
 
 \subsection{Procedure}
 
-%Where are the words from? Toronto Word Pool? Only nouns? (Claudio: idem)
-%See above
-Here are a few sentences about the words used and if any words were excluded.
-Participants took part in 18 trials. Words were presented at three
+Participants took part in 18 trials. Each trial consisted of 20 words pulled from the Toronto Noun Pool \cite{FrieEtal82} 
+Words were presented at three
 presentations rates: 2~Hz, 4~Hz, and 8~Hz Participants completed six trials in
 each condition. Trial order was randomized.  Participants were prompted to
 verbally recall as many words as possible from the list. Responses were
@@ -312,8 +313,6 @@ p<0.01$), and the effect of lag was stronger for 2~Hz compared to 4~Hz
 no significant effects (all $p>0.05$). These results show that increasing the
 presentation rate of study words has a negative effect on the temporal
 contiguity effect, and nullifies it at 8~Hz.
-% Would be nice to say a little more here.  Is the contiguity effect abolished
-% at 8 Hz?  Is it not abolished at 4 Hz?  
 
 \begin{figure}
 \begin{center}
@@ -322,7 +321,6 @@ contiguity effect, and nullifies it at 8~Hz.
 \caption{Lag CRP adjusted for primacy and recency effects. As presentation rates increase, the contiguity effect weakens but remains asymmetric.} 
 \label{CRP}
 \end{figure}
-
 
 \section{Discussion}
 
